--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
 .App {
   text-align: center;
+  
+    box-sizing: border-box;
 }
 
+*{
+   
+    box-sizing: border-box;
+  }
 .App-logo {
   height: 40vmin;
   pointer-events: none;
