--- a/src/components/upgrade/upgrade.css
+++ b/src/components/upgrade/upgrade.css
@@ -55,3 +55,14 @@
     height: 2rem;  
     overflow:hidden ;  
 }
+@media screen and (max-width: 576px){
+    .container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 10px;
+        width: 300px;
+        height: 1000px;
+    }
+}
